--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,11 @@ nav {
   font-family: var(--copy);
   color: var(--accent); }
 
+section ul {
+  padding: 0; }
+  section ul li {
+    margin-bottom: .5em; }
+
 @media only screen and (max-device-width: 569px) {
   body {
     grid-template-columns: var(--gcg) repeat(4, 1fr) var(--gcg);
