--- a/css/main.scss
+++ b/css/main.scss
@@ -47,10 +47,11 @@ figure {
   margin: 1em 0;
 }
 figcaption {
-  font-size: .6em;
+  font-size: .75em;
   text-align: center;
   font-family: var(--heading);
   margin-top: .6em;
+  color: lighten(#333333, 40);
 }
 nav {
   background: var(--background-light);
