--- a/css/main.scss
+++ b/css/main.scss
@@ -47,6 +47,9 @@ h1 {
   font-family: var(--heading);
   font-weight: 700;
   margin: 2em 0 1em;
+  span {
+    color: var(--accent);
+  }
 }
 h2 {
   font-family: var(--heading);
@@ -109,7 +112,7 @@ nav {
 .hero {
   span {
     font-size: 1em;
-    font-family: var(--copy);
+    // font-family: var(--copy);
     color: var(--accent);
   }
 }
@@ -128,102 +131,64 @@ section ul {
     }
   }
 }
-@media only screen and (max-device-width : 569px) {
-  body {
-    grid-template-columns: var(--gcg) repeat(4,1fr) var(--gcg);
-    grid-gap: var(--grg) var(--gcg);
-  }
-  h1 {
-    font-size: 2em;
-    line-height: 1.1em;
-  }
-  nav {
-    grid-column: 1 /span 6;
-    ul  {
-      display: grid;
-      grid-template-columns: var(--gcg) repeat(4,1fr) var(--gcg);
-      grid-gap: var(--grg) var(--gcg);
-      li {
-
-        &:first-child {
-          grid-column: 2;
-        }
-        &:nth-child(2) {
-          grid-column: 4;
-        }
-        &:nth-child(3) {
-          grid-column: 5;
-        }
-      }
-    }
-  }
-  section {
-    grid-column: 2 /span 4;
-  }
-}
-
-@media only screen and (min-device-width : 570px) and (max-device-width : 694px) {
-  body {
-    grid-template-columns: repeat(12, 1fr);
-    grid-gap: var(--grg) var(--gcg);
-  }
-  nav {
+.projects {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-gap: calc(2 * var(--grg)) var(--gcg);
+  h3 {
     grid-column: 1 / span 12;
+  }
+  .card {
+    grid-column: span 4;
+    width: 100%;
+    background: var(--background-light);
+    box-shadow: 0 3px 6px var(--background-darker), 0 3px 6px var(--background-darker);
 
-    ul  {
-      display: grid;
-      grid-template-columns: repeat(12, 1fr);
-      grid-gap: var(--grg) var(--gcg);
-      padding: 0;
-      li {
+    // Card Effect
+    transition: transform .25s;
 
-        a {
+    &::after {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      transition: opacity 2s cubic-bezier(.165, .84, .44, 1);
+      box-shadow: 0 8px 17px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .15);
+      content: '';
+      opacity: 0;
+      z-index: -1;
+    }
 
-        }
-        &:first-child {
-          grid-column: 2;
-          text-align: left;
-        }
-        &:nth-child(2) {
-          grid-column: 10;
-        }
+    &:hover,
+    &:focus {
+      transform: scale3d(1.006, 1.006, 1);
+
+      &::after {
+        opacity: 1;
       }
     }
-  }
-  section {
-    grid-column: 2 / span 10;
-  }
-}
-@media only screen and (min-device-width : 695px) and (max-device-width : 819px) {
-  body {
-    grid-template-columns: repeat(12, 1fr);
-    grid-gap: var(--grg) var(--gcg);
-  }
-  nav {
-    grid-column: 1 / span 12;
-
-    ul  {
-      display: grid;
-      grid-template-columns: repeat(12, 1fr);
-      grid-gap: var(--grg) var(--gcg);
-      padding: 0;
-      li {
-
-        a {
-
-        }
-        &:first-child {
-          grid-column: 3;
-          text-align: left;
-        }
-        &:nth-child(2) {
-          grid-column: 9;
-        }
+    // End Car Effect
+    img {
+      width: 100%;
+      height: auto;
+    }
+    a {
+      text-decoration: none;
+    }
+    .card-text {
+      padding: .5em;
+      vertical-align: middle;
+      font-family: var(--heading);
+      p {
+        margin: 0;
+        line-height: 1em;
+      }
+      span {
+        font-size: .75em;
+        margin-right: .25em;
       }
     }
-  }
-  section {
-    grid-column: 3 / span 8;
   }
 }
 
@@ -266,3 +231,5 @@ section ul {
   width: 100%;
   height: auto;
 }
+@import 'small';
+@import 'medium';
