--- a/css/main.scss
+++ b/css/main.scss
@@ -153,7 +153,7 @@ section ul {
       left: 0;
       width: 100%;
       height: 100%;
-      transition: opacity 2s cubic-bezier(.165, .84, .44, 1);
+      transition: opacity .25s cubic-bezier(.165, .84, .44, 1);
       box-shadow: 0 8px 17px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .15);
       content: '';
       opacity: 0;
@@ -185,8 +185,8 @@ section ul {
         line-height: 1em;
       }
       span {
-        font-size: .75em;
-        margin-right: .25em;
+        font-size: .5em;
+        margin-right: .5em;
       }
     }
   }
