--- a/css/main.css
+++ b/css/main.css
@@ -104,12 +104,12 @@ nav {
   font-size: 1em;
   color: var(--accent); }
 
-section ul {
+.content-block ul {
   list-style-type: none;
   padding: 0; }
-  section ul li {
+  .content-block ul li {
     margin-bottom: .5em; }
-    section ul li::before {
+    .content-block ul li::before {
       content: "\2022";
       color: #666666;
       font-weight: bold;
@@ -160,27 +160,6 @@ section ul {
         font-size: .5em;
         margin-right: .5em; }
 
-@media only screen and (min-device-width: 820px) {
-  body {
-    grid-template-columns: repeat(12, 1fr);
-    grid-gap: var(--grg) var(--gcg);
-    font-size: 22px; }
-
-  nav {
-    grid-column: 1 / span 12; }
-    nav ul {
-      display: grid;
-      grid-template-columns: repeat(12, 1fr);
-      grid-gap: var(--grg) var(--gcg);
-      padding: 0; }
-      nav ul li:first-child {
-        grid-column: 4;
-        text-align: left; }
-      nav ul li:nth-child(2) {
-        grid-column: 8; }
-
-  section {
-    grid-column: 4 / span 6; } }
 .responsive-h {
   width: 100%;
   height: auto; }
@@ -207,8 +186,11 @@ section ul {
       nav ul li:nth-child(3) {
         grid-column: 5; }
 
-  section {
+  .content-block {
     grid-column: 2 /span 4; }
+
+  figure {
+    grid-column: span 6; }
 
   .projects .card {
     grid-column: span 12; } }
@@ -230,7 +212,10 @@ section ul {
       nav ul li:nth-child(2) {
         grid-column: 10; }
 
-  section {
+  .content-block {
+    grid-column: 2 / span 10; }
+
+  figure {
     grid-column: 2 / span 10; }
 
   .projects .card {
@@ -253,10 +238,37 @@ section ul {
       nav ul li:nth-child(2) {
         grid-column: 9; }
 
-  section {
+  .content-block {
     grid-column: 3 / span 8; }
+
+  figure {
+    grid-column: 3 /span 8; }
 
   .projects .card {
     grid-column: span 6; } }
+@media only screen and (min-device-width: 820px) {
+  body {
+    grid-template-columns: repeat(12, 1fr);
+    grid-gap: var(--grg) var(--gcg);
+    font-size: 22px; }
+
+  nav {
+    grid-column: 1 / span 12; }
+    nav ul {
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      grid-gap: var(--grg) var(--gcg);
+      padding: 0; }
+      nav ul li:first-child {
+        grid-column: 4;
+        text-align: left; }
+      nav ul li:nth-child(2) {
+        grid-column: 8; }
+
+  .content-block {
+    grid-column: 4 / span 6; }
+
+  figure {
+    grid-column: 4 / span 6; } }
 
 /*# sourceMappingURL=main.css.map */
