--- a/css/main.scss
+++ b/css/main.scss
@@ -116,7 +116,7 @@ nav {
     color: var(--accent);
   }
 }
-section ul {
+.content-block ul {
   list-style-type: none;
   padding: 0;
   li {
@@ -191,45 +191,10 @@ section ul {
     }
   }
 }
-
-@media only screen and (min-device-width: 820px) {
-  body {
-    grid-template-columns: repeat(12, 1fr);
-    grid-gap: var(--grg) var(--gcg);
-    font-size: 22px;
-  }
-  nav {
-    grid-column: 1 / span 12;
-
-    ul  {
-      display: grid;
-      grid-template-columns: repeat(12, 1fr);
-      grid-gap: var(--grg) var(--gcg);
-      padding: 0;
-      li {
-
-        a {
-
-        }
-        &:first-child {
-          grid-column: 4;
-          text-align: left;
-        }
-        &:nth-child(2) {
-          grid-column: 8;
-        }
-      }
-    }
-  }
-  section {
-    grid-column: 4 / span 6;
-  }
-}
-
-
 .responsive-h {
   width: 100%;
   height: auto;
 }
 @import 'small';
 @import 'medium';
+@import 'large';
