--- a/css/main.css
+++ b/css/main.css
@@ -73,7 +73,7 @@ figcaption {
   font-size: .75em;
   text-align: center;
   font-family: var(--heading);
-  margin-top: .6em;
+  padding-top: .25em;
   color: #999999; }
 
 nav {
