--- a/css/main.scss
+++ b/css/main.scss
@@ -76,7 +76,7 @@ figcaption {
   font-size: .75em;
   text-align: center;
   font-family: var(--heading);
-  margin-top: .6em;
+  padding-top: .25em;
   color: lighten(#333333, 40);
 }
 nav {
