--- a/css/large.scss
+++ b/css/large.scss
@@ -1,9 +1,11 @@
 @media only screen and (min-device-width: 820px) {
-  body {
+  body,
+  main {
     grid-template-columns: repeat(12, 1fr);
     grid-gap: var(--grg) var(--gcg);
     font-size: 22px;
   }
+
   nav {
     grid-column: 1 / span 12;
 
