--- a/css/small.scss
+++ b/css/small.scss
@@ -1,5 +1,6 @@
 @media only screen and (max-device-width : 569px) {
-  body {
+  body,
+  main {
     grid-template-columns: var(--gcg) repeat(4,1fr) var(--gcg);
     grid-gap: var(--grg) var(--gcg);
   }
