--- a/css/large.scss
+++ b/css/large.scss
@@ -3,6 +3,7 @@
   main {
     grid-template-columns: repeat(12, 1fr);
     grid-gap: var(--grg) var(--gcg);
+    grid-column: 1 / span 12;
     font-size: 22px;
   }
 
