--- a/css/large.scss
+++ b/css/large.scss
@@ -1,12 +1,17 @@
 @media only screen and (min-device-width: 820px) {
   body,
-  main {
+  main,
+  footer {
     grid-template-columns: repeat(12, 1fr);
     grid-gap: var(--grg) var(--gcg);
     grid-column: 1 / span 12;
     font-size: 22px;
   }
-
+  footer {
+    div {
+      grid-column: 4 / span 6;
+    }
+  }
   nav {
     grid-column: 1 / span 12;
 
