--- a/css/small.scss
+++ b/css/small.scss
@@ -1,13 +1,12 @@
 @media only screen and (max-device-width : 569px) {
   body,
-  main {
+  main,
+  footer {
     grid-template-columns: var(--gcg) repeat(4,1fr) var(--gcg);
     grid-gap: var(--grg) var(--gcg);
     grid-column: 1 / span 6;
   }
-  footer {
-    grid-column: 1 / span 6
-  }
+
   h1 {
     font-size: 2em;
     line-height: 1.1em;
