--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,15 @@ main {
 p {
   line-height: 1.5em; }
 
+a.link {
+  text-decoration: none;
+  color: inherit;
+  line-height: 1em;
+  border-bottom: solid 2px; }
+  a.link:hover {
+    border-bottom: var(--accent) solid 4px;
+    color: var(--accent); }
+
 h1 {
   font-family: var(--heading);
   font-weight: 700;
@@ -81,6 +90,7 @@ nav {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  z-index: 10;
   box-shadow: 0 2px 3px var(--background-darker), 0 2px 3px var(--background-darker); }
   nav ul {
     padding: 0; }
@@ -93,10 +103,26 @@ nav {
         text-decoration: none;
         color: var(--color);
         font-family: var(--heading);
-        font-size: .75em; }
+        font-size: .75em;
+        display: inline-block; }
+        nav ul li a::after {
+          content: '';
+          display: block;
+          width: 0;
+          height: 2px;
+          background: var(--accent);
+          transition: width .3s; }
+        nav ul li a:hover::after {
+          width: 100%; }
       nav ul li .current {
         color: var(--accent);
         font-weight: 700; }
+        nav ul li .current::after {
+          content: '';
+          display: block;
+          width: 100%;
+          height: 2px;
+          background: var(--accent); }
       nav ul li:first-child {
         text-align: left; }
 
@@ -175,12 +201,13 @@ footer {
   footer div {
     grid-column: 2 / span 4; }
     footer div h5 {
-      margin: .25em 0;
+      margin: .75em 0 0;
       color: #666666; }
     footer div a {
       color: var(--background-light);
       text-decoration: none;
-      font-size: .75em; }
+      font-size: .75em;
+      margin-top: 0; }
 
 @media only screen and (max-device-width: 569px) {
   body,
