--- a/css/main.scss
+++ b/css/main.scss
@@ -46,14 +46,28 @@ p {
   line-height: 1.5em;
 }
 a.link {
-  text-decoration: none;
-  color: inherit;
-  line-height: 1em;
-  border-bottom:  solid 2px;
-  &:hover{
-    border-bottom: var(--accent) solid 4px;
-    color: var(--accent);
-  }
+  // text-decoration: none;
+  // color: inherit;
+  // line-height: 1em;
+  // border-bottom:  solid 2px;
+  // &:hover{
+  //   border-bottom: var(--accent) solid 4px;
+  //   color: var(--accent);
+  // }
+  background:
+     linear-gradient(
+       to bottom, var(--accent) 0%,
+       var(--accent) 100%
+     );
+    background-position: 0 100%;
+    background-repeat: repeat-x;
+    background-size: 1px 1px;
+    color: inherit;
+    text-decoration: none;
+    transition: background-size .2s;
+    &:hover {
+      background-size: 4px 50px;
+    }
 }
 h1 {
   font-family: var(--heading);
